--- a/.gitignore
+++ b/.gitignore
@@ -302,3 +302,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,visualstudiocode,intellij,spark,java,scala
+
+workers/project
+workers/.bsp
