Unified workers and master

--- a/.gitignore
+++ b/.gitignore
@@ -303,7 +303,5 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,visualstudiocode,intellij,spark,java,scala
 
-workers/project
-workers/.bsp
-master/project
-master/.bsp
+project
+.bsp
